--- a/RestaurantApp/index.html
+++ b/RestaurantApp/index.html
@@ -15,9 +15,13 @@
             <div class="foodis">
                 <img class="logo" src="Images/Logo.png">
                 <h2>foodis</h2>
-                
             </div>
             
+            <div class="username">
+                <img src="https://img.icons8.com/windows/27/000000/user-male-circle.png"/>
+                <p>HELLO, JAVIN Rionardi</p>
+            </div>
+
             <div class="hamburger">
                 <span></span>
                 <span></span>
